Cycles Crash on random frame in Blender 3.4 #103101

Closed
opened 2022-12-10 11:02:30 +01:00 by Mert Akbal · 12 comments

System Information
Operating system: Ubuntu 22.4
Graphics card: NVIDIA Corporation GA104M [GeForce RTX 3080 Mobile / Max-Q 8GB/16GB]

Blender Version
Broken: official 3.4
Worked: 3.3

Short description of error
While rendering an animation Cycles stops after a certain number of frames rendering. Everytime on a different frame. The render progress bar stays frozen. the interface can not be clicked anymore. I have to xkill. Simple scenes can be rendered though more complex ones as on the attachment cause this error. 3.3 can render same scenes without problems

Exact steps for others to reproduce the error
Render in cycles an animation.FROG_02.blend

**System Information** Operating system: Ubuntu 22.4 Graphics card: NVIDIA Corporation GA104M [GeForce RTX 3080 Mobile / Max-Q 8GB/16GB] **Blender Version** Broken: official 3.4 Worked: 3.3 **Short description of error** While rendering an animation Cycles stops after a certain number of frames rendering. Everytime on a different frame. The render progress bar stays frozen. the interface can not be clicked anymore. I have to xkill. Simple scenes can be rendered though more complex ones as on the attachment cause this error. 3.3 can render same scenes without problems **Exact steps for others to reproduce the error** Render in cycles an animation.[FROG_02.blend](https://archive.blender.org/developer/F14047989/FROG_02.blend)
Author

Added subscriber: @mertakbal

Added subscriber: @mertakbal

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Can't reproduce with
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Please click on Help > Save System Info and upload saved file.

Can't reproduce with Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 Please click on Help > Save System Info and upload saved file.
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

I personally experienced an issue like this yesterday with Blender 3.5 (most up to date with master at the time of testing) and rendering a animation with OptiX using a RTX 3060 with driver 527.56 on Windows 11.

I also experienced this issue intermittently over the last few weeks, but I thought it was caused by some of my own personal changes to Cycles that I was testing at the time.

This issue is "hit or miss". Some times it occurs, other times it doesn't, and I'm not sure why. I continue running some tests and see if I can find anything useful.

I personally experienced an issue like this yesterday with Blender 3.5 (most up to date with master at the time of testing) and rendering a animation with OptiX using a RTX 3060 with driver 527.56 on Windows 11. I also experienced this issue intermittently over the last few weeks, but I thought it was caused by some of my own personal changes to Cycles that I was testing at the time. This issue is "hit or miss". Some times it occurs, other times it doesn't, and I'm not sure why. I continue running some tests and see if I can find anything useful.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscribers: @fclem, @Jeroen-Bakker, @brecht

Added subscribers: @fclem, @Jeroen-Bakker, @brecht
Member

I should clarify something first. The issue I'm experiencing is this: I'm rendering an animation and then Blender pauses and becomes unresponsive. It doesn't return to normal and I have to force close it.

I ran some tests and found this out:

  1. Using really simple scenes makes it easier to reproduce the issue since frames get rendered really fast. And this issue usually appears at the start/end of a frame (I'm not actually sure which end it is, sorry)
  2. This issue can be reproduced with CPU rendering and GPU render on different operating systems (I tested Windows and macOS, and the user who made this report tested Linux, assuming we're talking about the same issue)
  3. When attaching Blender to a debugger, it seems thread 1 gets stuck around BLI_rw_mutex_lock (in source/blender/bf_blenlib/intern/threads.cc) when the issue occurs. This is the same on Windows and Mac. It usually reaches this function and gets stuck while calling other functions like BKE_image_acquire_renderresult and RE_AquireResultImage
  4. I can reproduce the issue even while running Blender with the launch command -t 1.

I don't really know how to progress from here since I'm not particularly knowledgable in this area. But it seems this issue is related to changes made to the displaying of rendered images. It may have something to do with b132e3b3ce or something else. So I'll tag @brecht @fclem and @Jeroen-Bakker to see if they can have a look at it?


Here are my steps to reproduce the issue:

  1. Change your Render In setting to Image Editor (Steps to change this setting are as follows: From the top of Blender select {nav Edit > Preferences}. In the Preferences window, go to the Interface tab and change {nav Editors > Temporary Editors > Render In} to Image Editor). I can only reproduce this issue if an image editor is open and set to Render result in the main Blender window and this is an easy way to ensure it happens.
  2. Create a fast to render scene (I have been using Cycles as my render engine, I'm not sure if it impacts EEVEE).
  3. Render a "long" animation (I set my frame count to 2000 to ensure the issue occurs).
  4. At some point, Blender will freeze/stop responding. This is the issue.

And here is the scene I've personally been using for testing:
#103101 Render freezing during animation.blend

And here's a video demonstrating the issue on my computer:
Demonstation of issue in #103101.mp4

I should clarify something first. The issue I'm experiencing is this: I'm rendering an animation and then Blender pauses and becomes unresponsive. It doesn't return to normal and I have to force close it. I ran some tests and found this out: 1. Using really simple scenes makes it easier to reproduce the issue since frames get rendered really fast. And this issue usually appears at the start/end of a frame (I'm not actually sure which end it is, sorry) 2. This issue can be reproduced with CPU rendering and GPU render on different operating systems (I tested Windows and macOS, and the user who made this report tested Linux, assuming we're talking about the same issue) 3. When attaching Blender to a debugger, it seems thread 1 gets stuck around `BLI_rw_mutex_lock` (in `source/blender/bf_blenlib/intern/threads.cc`) when the issue occurs. This is the same on Windows and Mac. It usually reaches this function and gets stuck while calling other functions like `BKE_image_acquire_renderresult` and `RE_AquireResultImage` 4. I can reproduce the issue even while running Blender with the launch command `-t 1`. I don't really know how to progress from here since I'm not particularly knowledgable in this area. But it seems this issue is related to changes made to the displaying of rendered images. It may have something to do with b132e3b3ce or something else. So I'll tag @brecht @fclem and @Jeroen-Bakker to see if they can have a look at it? --- Here are my steps to reproduce the issue: 1. Change your `Render In` setting to `Image Editor` (Steps to change this setting are as follows: From the top of Blender select {nav Edit > Preferences}. In the Preferences window, go to the `Interface` tab and change {nav Editors > Temporary Editors > Render In} to `Image Editor`). I can only reproduce this issue if an image editor is open and set to `Render result` in the main Blender window and this is an easy way to ensure it happens. 2. Create a fast to render scene (I have been using Cycles as my render engine, I'm not sure if it impacts EEVEE). 3. Render a "long" animation (I set my frame count to 2000 to ensure the issue occurs). 4. At some point, Blender will freeze/stop responding. This is the issue. And here is the scene I've personally been using for testing: [#103101 Render freezing during animation.blend](https://archive.blender.org/developer/F14056132/T103101_Render_freezing_during_animation.blend) And here's a video demonstrating the issue on my computer: [Demonstation of issue in #103101.mp4](https://archive.blender.org/developer/F14056133/Demonstation_of_issue_in_T103101.mp4)

This issue was referenced by 6325174a75

This issue was referenced by 6325174a753fc19effb1039f1872287383fbd787

This issue was referenced by 56237f33a1

This issue was referenced by 56237f33a16b9ec4c6f271b09b66eeabc5306e44

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-12-14 19:58:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103101
No description provided.