Fix T103101: random Cycles animation rendering freezing up the application